crates/threadloom/tests/compile_fail/missing_braces.rs
use threadloom::threadloom;

fn main() {
    threadloom! {
        div(id="test") {
            span "Hello"
        }
    }
}
