crates/threadloom/tests/compile_fail/missing_braces.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/missing_braces.rs:4:5
  |
3 |   fn main() {
  |            - expected `()` because of default return type
4 | /     weave! {
5 | |         div(id="test") {
6 | |             span "Hello"
7 | |         }
8 | |     }
  | |_____^ expected `()`, found `View`
  |
  = note: this error originates in the macro `weave` (in Nightly builds, run with -Z macro-backtrace for more info)
